--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <header>
+        <img src="index/snm title logo.jpg" class="logo" alt="logo">
          <nav>
              <ul class="nav__links">
                 <li> <a href="#">ADMINISTRATION</a></li>
