fixed some bit header

--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
 </head>
 <body>
     <header>
-        <img src="index/snm title logo.jpg" class="logo" alt="logo">
+        <img src="index/snm logo.png" class="logo" alt="logo">
          <nav>
+            <li class="logotext">SNMHSS</li>
              <ul class="nav__links">
-                <li> <a href="#">ADMINISTRATION</a></li>
-                <li> <a href="#">DEPARTMENT</a></li>
-                <li> <a href="#">PRINCIPAL</a></li>
-                <li> <a href="#">OFFICIAL</a></li>
-                <li> <a href="#">aman</a></li> 
+                <li class="hli"> <a class="ah" href="#">ADMINISTRATION</a></li>
+                <li class="hli"> <a class="ah" href="#">DEPARTMENT</a></li>
+                <li class="hli"> <a class="ah" href="#">PRINCIPAL</a></li>
+                <li class="hli"> <a class="ah" href="#">OFFICIAL</a></li>
+                <li class="hli"> <a class="ah" href="#">aman</a></li> 
              </ul>
          </nav>
     </header>
