--- a/index.html
+++ b/index.html
@@ -19,6 +19,18 @@
              </ul>
          </nav>
     </header>
-    
+
+
+
+
+
+
+
+
+
+    <footer  class="footer">
+        
+
+    </footer>
 </body>
 </html>
