--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <html>
 
 <head> <title>snmhss</title>
+
+
+                <!-- CSS Source tags -->
     <link rel="stylesheet" href="index\main.css">
-  
-   
+
+
+             <!-- Other Source CSS & Script -->
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 </head>
 <body>
     <header>
