--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
              <!-- Other Source CSS & Script -->
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 </head>
+             <!--      body started         -->
 <body>
     <header>
         <img src="index/snm logo.png" class="logo" alt="logo">
@@ -33,9 +34,16 @@
 
 
 
-    <footer>
-        
-
+      <footer>
+            <nav class="af">
+                <div class="Social_logo">
+                <p class="fab fa-whatsapp"></p> 
+                <p class="fab fa-google"></p>
+                <p class="fab fa-youtube"></p>
+                <p class="fab fa-facebook-square"></p>
+               </div>
+                <p>S N M HIGHER SECONDARY SCHOOL</p>
+            </nav>    
     </footer>
 </body>
 </html>
