--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
-<html>
+ <html>
 
 <head> <title>snmhss</title>
 
 
                 <!-- CSS Source tags -->
-    <link rel="stylesheet" href="index\main.css">
-
+    <link rel="stylesheet" href="index/CSS/main.css">
+    <link rel="stylesheet" href="index/CSS/staffsarea.css">
 
              <!-- Other Source CSS & Script -->
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+
+             <!--  JavaScript Source tags   -->
+    <script src="index/main.js"></script>
 </head>
              <!--      body started         -->
 <body>
@@ -25,15 +28,17 @@
              </ul>
          </nav>
     </header>
+     <div class="inner_body" style="background: url(banbak.jpeg); width:100%; height:220px;">
 
+     <div class="photos" style="margin:0px auto;">
+      <div class="photo">
+	<img class="staffs-pho" src="index/staffs/manager.jpg">
+	<h4>MANAGER</h4>P. MOHAMMED ASHARAF
+      </div>
+    </div>
+  </div>
 
-
-
-
-
-
-
-
+    </nav>
       <footer>
             <nav class="af">
                 <div class="Social_logo">
