add shadow button

--- a/index.html
+++ b/index.html
@@ -28,17 +28,28 @@
              </ul>
          </nav>
     </header>
-     <div class="inner_body" style="background: url(banbak.jpeg); width:100%; height:220px;">
-
+     <div class="inner_body">
      <div class="photos" style="margin:0px auto;">
       <div class="photo">
-	<img class="staffs-pho" src="index/staffs/manager.jpg">
-	<h4>MANAGER</h4>P. MOHAMMED ASHARAF
+        	<img class="staffs-pho" src="index/staffs/manager.jpg">
+        	<h4 class="staffs-title">MANAGER</h4>
+          <h6 class="staffs-title">P. MOHAMMED ASHARAF</h6>
       </div>
     </div>
   </div>
 
-    </nav>
+  <div class="inner_body">
+    <div class="photos" style="margin:0px auto;">
+     <div class="photo">
+           <img class="staffs-pho" src="index/staffs/manager.jpg">
+           <h4 class="staffs-title">MANAGER</h4>
+         <h6 class="staffs-title">P. MOHAMMED ASHARAF</h6>
+     </div>
+   </div>
+ </div>
+ 
+ <!-- footer is closed i will Check after some time -->
+      <!----
       <footer>
             <nav class="af">
                 <div class="Social_logo">
@@ -50,5 +61,6 @@
                 <p>S N M HIGHER SECONDARY SCHOOL</p>
             </nav>    
     </footer>
+                      -->
 </body>
 </html>
