update the button

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </header>
      <div class="inner_body">
      <div class="photos" style="margin:0px auto;">
-      <div class="photo">
+      <div class="photo manager">
         	<img class="staffs-pho" src="index/staffs/manager.jpg">
         	<h4 class="staffs-title">MANAGER</h4>
           <h6 class="staffs-title">P. MOHAMMED ASHARAF</h6>
@@ -40,10 +40,10 @@
 
   <div class="inner_body">
     <div class="photos" style="margin:0px auto;">
-     <div class="photo">
-           <img class="staffs-pho" src="index/staffs/manager.jpg">
-           <h4 class="staffs-title">MANAGER</h4>
-         <h6 class="staffs-title">P. MOHAMMED ASHARAF</h6>
+     <div class="photo jasmin">
+           <img class="staffs-pho" src="index/staffs/JASMIN.jpg">
+           <h4 class="staffs-title">PRINCIPAL</h4>
+         <h6 class="staffs-title">JASMIN. A</h6>
      </div>
    </div>
  </div>
