--- a/index.html
+++ b/index.html
@@ -47,6 +47,36 @@
      </div>
    </div>
  </div>
+
+ <div class="inner_body">
+  <div class="photos" style="margin:0px auto;">
+   <div class="photo mulla">
+         <img class="staffs-pho" src="index/staffs/mulla.jpg">
+         <h4 class="staffs-title">HEAD MISTRESS</h4>
+       <h6 class="staffs-title">MULLABEEVI NK</h6>
+   </div>
+ </div>
+</div>
+
+<div class="inner_body">
+  <div class="photos" style="margin:0px auto;">
+   <div class="photo bella">
+         <img class="staffs-pho" src="index/staffs/bELLA.jpeg">
+         <h4 class="staffs-title">Dy.HEAD MISTRESS</h4>
+       <h6 class="staffs-title">BELLA JOSE K</h6>
+   </div>
+ </div>
+</div>
+
+<div class="inner_body">
+  <div class="photos" style="margin:0px auto;">
+   <div class="photo rafi">
+         <img class="staffs-pho" src="index/staffs/rafi.jpg">
+         <h4 class="staffs-title">PTA PRESIDENT</h4>
+       <h6 class="staffs-title">AHAMMED RAFI PO</h6>
+   </div>
+ </div>
+</div>
  
  <!-- footer is closed i will Check after some time -->
       <!----
