--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
              </ul>
          </nav>
     </header>
+    <a href="index\staffs\Manager\Manager.html">
      <div class="inner_body">
      <div class="photos" style="margin:0px auto;">
       <div class="photo manager">
@@ -37,6 +38,7 @@
       </div>
     </div>
   </div>
+</a>
 
   <div class="inner_body">
     <div class="photos" style="margin:0px auto;">
