--- a/index/staffs/Manager/Manager.html
+++ b/index/staffs/Manager/Manager.html
@@ -1,11 +1,11 @@
 <html>
     <head>
         <title>Manager</title>
-        <link rel="stylesheet" href="index/staffs/manager/main.css">
+        <link rel="stylesheet" href="index\staffs\Manager\main.css">
 
     </head>
     <body>
-        
-
+        <img class="manphoto" src="index\staffs\Manager\JPG\manager_main.jpg" alt="">
+     
     </body>
 </html>
