--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 
 <head> <title>snmhss</title>
 
-
                 <!-- CSS Source tags -->
     <link rel="stylesheet" href="index/CSS/main.css">
     <link rel="stylesheet" href="index/CSS/staffsarea.css">
+    <link rel="stylesheet" href="index/CSS/map-and-point.css">
 
              <!-- Other Source CSS & Script -->
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
@@ -15,7 +15,7 @@
 </head>
              <!--      body started         -->
 <body>
-    <header>
+    <header id="header">
         <img src="index/snm logo.png" class="logo" alt="logo">
          <nav>
             <li class="logotext">SNMHSS</li>
@@ -28,50 +28,39 @@
              </ul>
          </nav>
     </header>
-    <a href="index\staffs\Manager\Manager.html">
+    
      <div class="inner_body">
      <div class="photos" style="margin:0px auto;">
+
       <div class="photo manager">
+        <a href="index\staffs\Manager\Manager.html">
         	<img class="staffs-pho" src="index/staffs/manager.jpg">
         	<h4 class="staffs-title">MANAGER</h4>
           <h6 class="staffs-title">P. MOHAMMED ASHARAF</h6>
+        </a>
       </div>
-    </div>
-  </div>
-</a>
 
-  <div class="inner_body">
-    <div class="photos" style="margin:0px auto;">
      <div class="photo jasmin">
            <img class="staffs-pho" src="index/staffs/JASMIN.jpg">
            <h4 class="staffs-title">PRINCIPAL</h4>
          <h6 class="staffs-title">JASMIN. A</h6>
      </div>
-   </div>
- </div>
 
- <div class="inner_body">
-  <div class="photos" style="margin:0px auto;">
    <div class="photo mulla">
          <img class="staffs-pho" src="index/staffs/mulla.jpg">
          <h4 class="staffs-title">HEAD MISTRESS</h4>
        <h6 class="staffs-title">MULLABEEVI NK</h6>
    </div>
- </div>
-</div>
+ 
 
-<div class="inner_body">
-  <div class="photos" style="margin:0px auto;">
    <div class="photo bella">
          <img class="staffs-pho" src="index/staffs/bELLA.jpeg">
          <h4 class="staffs-title">Dy.HEAD MISTRESS</h4>
        <h6 class="staffs-title">BELLA JOSE K</h6>
    </div>
- </div>
-</div>
 
-<div class="inner_body">
-  <div class="photos" style="margin:0px auto;">
+
+
    <div class="photo rafi">
          <img class="staffs-pho" src="index/staffs/rafi.jpg">
          <h4 class="staffs-title">PTA PRESIDENT</h4>
@@ -79,8 +68,18 @@
    </div>
  </div>
 </div>
- 
- <!-- footer is closed i will Check after some time -->
+
+<div class="mp-inner_body">
+<div class="map" style="margin:0px auto;">
+  <div class="mapbody">
+<iframe class="maplink" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d473.60270689902046!2d75.85387375258861!3d11.052608299687835!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba652554bf47391%3A0x9996613393c585a6!2sS.N.M.H.S.S%20Parappanangadi!5e0!3m2!1sen!2sin!4v1644089941182!5m2!1sen!2sin" width="500" height="350"  allowfullscreen="" loading="lazy"></iframe>
+    </div>
+  </div>
+  <img class="mapicon" src="Global\font Awesome\map-icon.svg">
+</div>
+
+
+<!-- footer is closed i will Check after some time -->
       <!----
       <footer>
             <nav class="af">
@@ -94,5 +93,5 @@
             </nav>    
     </footer>
                       -->
-</body>
+</body> 
 </html>
